[package]
name = "crcdir"
version = "0.2.2"
authors = ["Jack Gallagher <jack@gallabytes.com>"]
license = "MIT OR Apache-2.0"
description = "A thin wrapper around crc32fast to checksum an entire directory"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/crcdir"
repository = "https://github.com/GallagherCommaJack/crcdir"
keywords = ["checksum", "crc", "crc32", "simd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
crc32fast = "1.2.0"
walkdir = "2.2.7"
failure = "0.1"
rayon = "1.0"
num_cpus = "1.0"
filebuffer = "0.4.0"
